<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.nourtayeb.currencyconverter.clean_arch.presentation.currency_converter.CurrencyConverterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="?actionBarSize"
                android:padding="16dp"
                android:text="@string/currency_choose"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="@{() -> viewModel.goToCurrencySelector()}"

                android:minHeight="?actionBarSize"
                android:padding="3dp"
                android:layout_marginEnd="3dp"
                android:gravity="center_vertical"
                android:text="@string/set_Dafult"
                android:textColor="@color/white" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/amount"
                android:layout_width="200dp"
                android:hint="0.0"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={viewModel.amount}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/amount"
                android:text="@{viewModel.currency}"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:background="@drawable/layout_border_button"
                android:onClick="@{() -> viewModel.convert()}"
                android:paddingStart="15dp"
                android:paddingTop="7dp"
                android:paddingEnd="15dp"
                android:paddingBottom="7dp"
                android:text="@string/convert"
                android:textColor="@color/white" />

            <ProgressBar
                android:layout_width="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="12dp"
                android:layout_toStartOf="@id/convert"
                android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
                android:layout_height="20dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/setFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.goToFavorite()}"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:visibility="@{viewModel.noData ? View.GONE : View.VISIBLE}"
                android:layout_marginEnd="5dp"
                android:background="@drawable/layout_border_button2"
                android:paddingStart="15dp"
                android:paddingTop="7dp"
                android:paddingEnd="15dp"
                android:paddingBottom="7dp"
                android:text="@string/set_favorite_curr"
                android:textColor="@color/white" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_below="@id/setFav"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:visibility="@{viewModel.noData ? View.VISIBLE : View.GONE}"
                android:gravity="center"
                android:onClick="@{() -> viewModel.goToFavorite()}"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/favorite_empty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/layout_border_button2"
                    android:paddingStart="15dp"
                    android:paddingTop="7dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="7dp"
                    android:text="@string/set_favorite_curr"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</layout>